infra/k8s/airline1-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airlin1-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: airlin1-service
  template:
    metadata:
      labels:
        app: airlin1-service
    spec:
      containers:
      - name: airlin1-service
        image: jettzgg/airline1-service:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8001
