infra/k8s/airline2-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airline2-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: airline2-service
  template:
    metadata:
      labels:
        app: airline2-service
    spec:
      containers:
      - name: airline2-service
        image: jettzgg/airline2-service:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8002
