infra/k8s/airline2-service-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: airline2-service-cluster-ip-service
spec:
  selector:
    app: airline2-service
  ports:
    - port: 8002
      targetPort: 8002
  type: ClusterIP
