infra/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployer
spec:
  replicas: 1
  selector:
    matchLabels: 
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: mihirvir10/client-m
          ports:
            - containerPort: 5173

---
apiVersion: v1
kind: Service
metadata:
  name: client-service
spec:
  type: NodePort
  selector:
    app: client
  ports:
    - name: client
      port: 5173
      targetPort: 5173
      protocol: TCP
