infra/k8s/rabbit-mq-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
spec:
  type: ClusterIP
  selector:
    app: rabbitmq
  ports:
    - port : 5672
      targetPort: 5672
      name: AMQP

    - port : 15672 
      targetPort: 15672
      name: Console
