infra/k8s/user-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-srv
spec:
  selector:
    app: user
  ports:
    - name: user
      port: 5000
      targetPort: 5000
      protocol: TCP
