infra/k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
# UPDATE API
kind: Ingress
metadata:
  name: load-ingress-service
  annotations:
    # REMOVE CLASSNAME ANNOTATION
    nginx.ingress.kubernetes.io/use-regex: 'true'
    # ADD ANNOTATION
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
    # ADD ANNOTATION
spec:
  ingressClassName: nginx
  # ADD INGRESSCLASSNAME FIELD
  rules:
    - http:
        paths:
          - path: /api/v1/flight-routes-service/?(.*)
            # UPDATE PATH
            pathType: ImplementationSpecific
            # ADD PATHTYPE
            backend:
              service:
                # UPDATE SERVICE FIELDS
                name: flight-routes-cluster-ip-service
                port:
                  number: 8000
          - path: /broker_service/api/v1/order/?(.*)
            # UPDATE PATH
            pathType: ImplementationSpecific
            # ADD PATHTYPE
            backend:
              service:
                # UPDATE SERVICE FIELDS
                name: broker-srv
                port:
                  number: 8021
          - path: /api/v1/user/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: user-srv
                port:
                  number: 5000
          - path: /api/v1/email/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: email-srv
                port:
                  number: 7999
          # if above paths doesn't matches request is transfered
          # to client.
          - path: /?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: client-service
                port:
                  number: 5173
